[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/CurseOptions.gd" type="Script" id=1]
[ext_resource path="res://resources/font_adventurer_dynamic.tres" type="DynamicFont" id=2]
[ext_resource path="res://resources/music/DavidKBD - Eternity Pack - 11 - Screams in the Distance - loop.ogg" type="AudioStream" id=3]

[node name="CurseOptions" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -128.0
margin_right = 320.0
margin_bottom = 128.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 128.0
margin_right = 253.0
margin_bottom = 256.0

[node name="Panel" type="Panel" parent="HBoxContainer/MarginContainer"]
margin_right = 125.0
margin_bottom = 256.0
rect_min_size = Vector2( 125, 100 )

[node name="Curse1" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
margin_right = 125.0
margin_bottom = 256.0
rect_min_size = Vector2( 125, 253 )

[node name="Image" type="TextureRect" parent="HBoxContainer/MarginContainer/Curse1"]
visible = false
margin_right = 125.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
expand = true
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/Curse1"]
margin_right = 125.0
margin_bottom = 92.0

[node name="HBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/Curse1/MarginContainer"]
margin_right = 125.0
margin_bottom = 92.0
alignment = 1

[node name="Name" type="Label" parent="HBoxContainer/MarginContainer/Curse1/MarginContainer/HBoxContainer"]
margin_right = 125.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Container 1"
align = 1

[node name="Description" type="Label" parent="HBoxContainer/MarginContainer/Curse1/MarginContainer/HBoxContainer"]
margin_top = 20.0
margin_right = 125.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 48 )
custom_fonts/font = ExtResource( 2 )
autowrap = true

[node name="Curse1Button" type="Button" parent="HBoxContainer/MarginContainer/Curse1/MarginContainer/HBoxContainer"]
margin_top = 72.0
margin_right = 125.0
margin_bottom = 92.0
size_flags_vertical = 3
text = "Select"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
margin_left = 257.0
margin_right = 382.0
margin_bottom = 256.0

[node name="Panel" type="Panel" parent="HBoxContainer/MarginContainer2"]
margin_right = 125.0
margin_bottom = 256.0

[node name="Curse2" type="VBoxContainer" parent="HBoxContainer/MarginContainer2"]
margin_right = 125.0
margin_bottom = 256.0
rect_min_size = Vector2( 125, 0 )

[node name="Image" type="TextureRect" parent="HBoxContainer/MarginContainer2/Curse2"]
visible = false
margin_right = 125.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
expand = true
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer2/Curse2"]
margin_right = 125.0
margin_bottom = 92.0

[node name="HBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer2/Curse2/MarginContainer"]
margin_right = 125.0
margin_bottom = 92.0

[node name="Name" type="Label" parent="HBoxContainer/MarginContainer2/Curse2/MarginContainer/HBoxContainer"]
margin_right = 125.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Container 1"
align = 1

[node name="Description" type="Label" parent="HBoxContainer/MarginContainer2/Curse2/MarginContainer/HBoxContainer"]
margin_top = 20.0
margin_right = 125.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 48 )
custom_fonts/font = ExtResource( 2 )
autowrap = true

[node name="Curse2Button" type="Button" parent="HBoxContainer/MarginContainer2/Curse2/MarginContainer/HBoxContainer"]
margin_top = 72.0
margin_right = 125.0
margin_bottom = 92.0
text = "Select"

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer"]
margin_left = 386.0
margin_right = 511.0
margin_bottom = 256.0

[node name="Panel" type="Panel" parent="HBoxContainer/MarginContainer3"]
margin_right = 125.0
margin_bottom = 256.0

[node name="Curse3" type="VBoxContainer" parent="HBoxContainer/MarginContainer3"]
margin_right = 125.0
margin_bottom = 256.0
rect_min_size = Vector2( 125, 0 )

[node name="Image" type="TextureRect" parent="HBoxContainer/MarginContainer3/Curse3"]
visible = false
margin_right = 125.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
expand = true
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer3/Curse3"]
margin_right = 125.0
margin_bottom = 92.0

[node name="HBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer3/Curse3/MarginContainer"]
margin_right = 125.0
margin_bottom = 92.0

[node name="Name" type="Label" parent="HBoxContainer/MarginContainer3/Curse3/MarginContainer/HBoxContainer"]
margin_right = 125.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Container 1"
align = 1

[node name="Description" type="Label" parent="HBoxContainer/MarginContainer3/Curse3/MarginContainer/HBoxContainer"]
margin_top = 20.0
margin_right = 125.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 48 )
custom_fonts/font = ExtResource( 2 )
autowrap = true

[node name="Curse3Button" type="Button" parent="HBoxContainer/MarginContainer3/Curse3/MarginContainer/HBoxContainer"]
margin_top = 72.0
margin_right = 125.0
margin_bottom = 92.0
text = "Select"

[node name="MarginContainerFinal" type="MarginContainer" parent="HBoxContainer"]
visible = false
margin_left = 451.0
margin_right = 576.0
margin_bottom = 256.0

[node name="Panel" type="Panel" parent="HBoxContainer/MarginContainerFinal"]
margin_right = 125.0
margin_bottom = 256.0

[node name="CurseFinal" type="VBoxContainer" parent="HBoxContainer/MarginContainerFinal"]
margin_right = 125.0
margin_bottom = 256.0
rect_min_size = Vector2( 125, 0 )

[node name="Image" type="TextureRect" parent="HBoxContainer/MarginContainerFinal/CurseFinal"]
visible = false
margin_right = 125.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
expand = true
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainerFinal/CurseFinal"]
margin_top = 68.0
margin_right = 125.0
margin_bottom = 158.0

[node name="HBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainerFinal/CurseFinal/MarginContainer"]
margin_right = 125.0
margin_bottom = 90.0

[node name="Name" type="Label" parent="HBoxContainer/MarginContainerFinal/CurseFinal/MarginContainer/HBoxContainer"]
margin_right = 125.0
margin_bottom = 14.0
text = "Container 1"
align = 1

[node name="Description" type="Label" parent="HBoxContainer/MarginContainerFinal/CurseFinal/MarginContainer/HBoxContainer"]
margin_top = 18.0
margin_right = 125.0
margin_bottom = 66.0
rect_min_size = Vector2( 0, 48 )
autowrap = true

[node name="CurseFinal" type="Button" parent="HBoxContainer/MarginContainerFinal/CurseFinal/MarginContainer/HBoxContainer"]
margin_top = 70.0
margin_right = 125.0
margin_bottom = 90.0
text = "Select"

[node name="Label" type="Label" parent="."]
margin_left = 408.0
margin_top = 104.0
margin_right = 616.0
margin_bottom = 136.0
text = "CHOOSE A NEW CURSE"
align = 1
valign = 1

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="HBoxContainer/MarginContainer/Curse1/MarginContainer/HBoxContainer/Curse1Button" to="." method="_on_Curse1Button_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer2/Curse2/MarginContainer/HBoxContainer/Curse2Button" to="." method="_on_Curse2Button_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer3/Curse3/MarginContainer/HBoxContainer/Curse3Button" to="." method="_on_Curse3Button_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainerFinal/CurseFinal/MarginContainer/HBoxContainer/CurseFinal" to="." method="_on_CurseFinal_pressed"]
